teste: images on notebook

--- a/work/E3-report.ipynb
+++ b/work/E3-report.ipynb
@@ -980,15 +980,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 204,
    "id": "7aac0901-02ad-4a40-964e-dc03430f8e77",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-10T17:08:03.585127Z",
-     "iopub.status.busy": "2023-06-10T17:08:03.583733Z",
-     "iopub.status.idle": "2023-06-10T17:08:03.998965Z",
-     "shell.execute_reply": "2023-06-10T17:08:03.998386Z",
-     "shell.execute_reply.started": "2023-06-10T17:08:03.585074Z"
+     "iopub.execute_input": "2023-06-10T17:14:49.620197Z",
+     "iopub.status.busy": "2023-06-10T17:14:49.618364Z",
+     "iopub.status.idle": "2023-06-10T17:14:50.023488Z",
+     "shell.execute_reply": "2023-06-10T17:14:50.022866Z",
+     "shell.execute_reply.started": "2023-06-10T17:14:49.620109Z"
     },
     "tags": []
    },
@@ -1032,57 +1032,57 @@
        "        <tr>\n",
        "            <td>1</td>\n",
        "            <td>None</td>\n",
-       "            <td>None</td>\n",
+       "            <td>0</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>2</td>\n",
        "            <td>None</td>\n",
-       "            <td>None</td>\n",
+       "            <td>0</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>3</td>\n",
        "            <td>None</td>\n",
-       "            <td>None</td>\n",
+       "            <td>0</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>4</td>\n",
        "            <td>None</td>\n",
-       "            <td>None</td>\n",
+       "            <td>0</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>5</td>\n",
        "            <td>None</td>\n",
-       "            <td>None</td>\n",
+       "            <td>0</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>6</td>\n",
        "            <td>None</td>\n",
-       "            <td>None</td>\n",
+       "            <td>0</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>7</td>\n",
        "            <td>None</td>\n",
-       "            <td>None</td>\n",
+       "            <td>0</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>8</td>\n",
        "            <td>None</td>\n",
-       "            <td>None</td>\n",
+       "            <td>0</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>9</td>\n",
        "            <td>None</td>\n",
-       "            <td>None</td>\n",
+       "            <td>0</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>10</td>\n",
        "            <td>None</td>\n",
-       "            <td>None</td>\n",
+       "            <td>0</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>11</td>\n",
        "            <td>None</td>\n",
-       "            <td>None</td>\n",
+       "            <td>0</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>12</td>\n",
@@ -1092,32 +1092,32 @@
        "        <tr>\n",
        "            <td>None</td>\n",
        "            <td>Friday   </td>\n",
-       "            <td>None</td>\n",
+       "            <td>0</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>None</td>\n",
        "            <td>Monday   </td>\n",
-       "            <td>None</td>\n",
+       "            <td>0</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>None</td>\n",
        "            <td>Saturday </td>\n",
-       "            <td>None</td>\n",
+       "            <td>0</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>None</td>\n",
        "            <td>Sunday   </td>\n",
-       "            <td>None</td>\n",
+       "            <td>0</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>None</td>\n",
        "            <td>Thursday </td>\n",
-       "            <td>None</td>\n",
+       "            <td>0</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>None</td>\n",
        "            <td>Tuesday  </td>\n",
-       "            <td>None</td>\n",
+       "            <td>0</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>None</td>\n",
@@ -1131,29 +1131,29 @@
        "+--------+-------------+-----------------------+\n",
        "| months | day_of_week |          avg          |\n",
        "+--------+-------------+-----------------------+\n",
-       "|   1    |     None    |          None         |\n",
-       "|   2    |     None    |          None         |\n",
-       "|   3    |     None    |          None         |\n",
-       "|   4    |     None    |          None         |\n",
-       "|   5    |     None    |          None         |\n",
-       "|   6    |     None    |          None         |\n",
-       "|   7    |     None    |          None         |\n",
-       "|   8    |     None    |          None         |\n",
-       "|   9    |     None    |          None         |\n",
-       "|   10   |     None    |          None         |\n",
-       "|   11   |     None    |          None         |\n",
+       "|   1    |     None    |           0           |\n",
+       "|   2    |     None    |           0           |\n",
+       "|   3    |     None    |           0           |\n",
+       "|   4    |     None    |           0           |\n",
+       "|   5    |     None    |           0           |\n",
+       "|   6    |     None    |           0           |\n",
+       "|   7    |     None    |           0           |\n",
+       "|   8    |     None    |           0           |\n",
+       "|   9    |     None    |           0           |\n",
+       "|   10   |     None    |           0           |\n",
+       "|   11   |     None    |           0           |\n",
        "|   12   |     None    | 1195.7450000000000000 |\n",
-       "|  None  |  Friday     |          None         |\n",
-       "|  None  |  Monday     |          None         |\n",
-       "|  None  |  Saturday   |          None         |\n",
-       "|  None  |  Sunday     |          None         |\n",
-       "|  None  |  Thursday   |          None         |\n",
-       "|  None  |  Tuesday    |          None         |\n",
+       "|  None  |  Friday     |           0           |\n",
+       "|  None  |  Monday     |           0           |\n",
+       "|  None  |  Saturday   |           0           |\n",
+       "|  None  |  Sunday     |           0           |\n",
+       "|  None  |  Thursday   |           0           |\n",
+       "|  None  |  Tuesday    |           0           |\n",
        "|  None  |  Wednesday  | 1195.7450000000000000 |\n",
        "+--------+-------------+-----------------------+"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1168,188 +1168,13 @@
     "FROM\n",
     "    generate_series('2022-01-01'::timestamp,'2022-12-31', '1 day') as day\n",
     ")\n",
-    "SELECT months, day_of_week, AVG(total_price)\n",
+    "SELECT months, day_of_week, COALESCE(AVG(total_price), 0) avg\n",
     "FROM\n",
     "    product_sales\n",
     "RIGHT JOIN\n",
     "    teste USING (day_of_week, months, years)\n",
     "    GROUP BY GROUPING SETS((months),(day_of_week))\n",
     "    ORDER BY months, day_of_week;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 197,
-   "id": "2b04f589-bf27-4ab7-942d-b21871cb7ee4",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-10T17:04:14.806666Z",
-     "iopub.status.busy": "2023-06-10T17:04:14.805862Z",
-     "iopub.status.idle": "2023-06-10T17:04:15.243503Z",
-     "shell.execute_reply": "2023-06-10T17:04:15.243011Z",
-     "shell.execute_reply.started": "2023-06-10T17:04:14.806628Z"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"None\">Running query in &#x27;postgresql://db:***@postgres/db&#x27;</span>"
-      ],
-      "text/plain": [
-       "Running query in 'postgresql://db:***@postgres/db'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"color: green\">19 rows affected.</span>"
-      ],
-      "text/plain": [
-       "19 rows affected."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>day_of_week</th>\n",
-       "            <th>months</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>Friday   </td>\n",
-       "            <td>None</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Monday   </td>\n",
-       "            <td>None</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Saturday </td>\n",
-       "            <td>None</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Sunday   </td>\n",
-       "            <td>None</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Thursday </td>\n",
-       "            <td>None</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Tuesday  </td>\n",
-       "            <td>None</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Wednesday</td>\n",
-       "            <td>None</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>None</td>\n",
-       "            <td>1</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>None</td>\n",
-       "            <td>2</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>None</td>\n",
-       "            <td>3</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>None</td>\n",
-       "            <td>4</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>None</td>\n",
-       "            <td>5</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>None</td>\n",
-       "            <td>6</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>None</td>\n",
-       "            <td>7</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>None</td>\n",
-       "            <td>8</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>None</td>\n",
-       "            <td>9</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>None</td>\n",
-       "            <td>10</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>None</td>\n",
-       "            <td>11</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>None</td>\n",
-       "            <td>12</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "+-------------+--------+\n",
-       "| day_of_week | months |\n",
-       "+-------------+--------+\n",
-       "|  Friday     |  None  |\n",
-       "|  Monday     |  None  |\n",
-       "|  Saturday   |  None  |\n",
-       "|  Sunday     |  None  |\n",
-       "|  Thursday   |  None  |\n",
-       "|  Tuesday    |  None  |\n",
-       "|  Wednesday  |  None  |\n",
-       "|     None    |   1    |\n",
-       "|     None    |   2    |\n",
-       "|     None    |   3    |\n",
-       "|     None    |   4    |\n",
-       "|     None    |   5    |\n",
-       "|     None    |   6    |\n",
-       "|     None    |   7    |\n",
-       "|     None    |   8    |\n",
-       "|     None    |   9    |\n",
-       "|     None    |   10   |\n",
-       "|     None    |   11   |\n",
-       "|     None    |   12   |\n",
-       "+-------------+--------+"
-      ]
-     },
-     "execution_count": 197,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%sql\n",
-    "WITH teste AS (\n",
-    "SELECT DISTINCT\n",
-    "    to_char(day1, 'Day') as day_of_week,\n",
-    "    EXTRACT(month FROM day2) months\n",
-    "FROM\n",
-    "    generate_series('2022-01-01'::timestamp,'2022-12-31', '1 day') as day1\n",
-    "    FULL JOIN\n",
-    "    generate_series('2022-01-01'::timestamp,'2022-12-31', '1 day') as day2 ON (false)\n",
-    ")\n",
-    "SELECT *\n",
-    "FROM teste;"
    ]
   },
   {
@@ -1387,6 +1212,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c543c3d4-95d0-41d6-9152-1a1158b94dc7",
+   "metadata": {},
+   "source": [
+    "Tivemos que utilizar um script em python para popular as tabelas com muitas mais entradas de forma a forçar o postgres a usar os indices e de forma a conseguirmos testar o impacto do uso dos indices."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "eee442d4-8f78-4493-a320-74a4a8de0721",
@@ -1399,11 +1232,7 @@
     "\n",
     "DROP INDEX IF EXISTS orders_year_idx;\n",
     "\n",
-    "CREATE INDEX orders_year_idx ON orders USING hash (EXTRACT(YEAR FROM date));\n",
-    "\n",
-    "DROP INDEX IF EXISTS product_price_idx;\n",
-    "\n",
-    "CREATE INDEX product_price_idx ON product (price);"
+    "CREATE INDEX orders_year_idx ON orders USING hash (EXTRACT(YEAR FROM date));"
    ]
   },
   {
@@ -1412,6 +1241,10 @@
    "metadata": {},
    "source": [
     "### Tipo de Índice, Atributos & Justificação\n",
+    "\n",
+    "- **Antes:**\n",
+    "\n",
+    "- **Depois:**\n",
     "\n",
     "- Indice Hash na tabela orders do ano extraido da coluna date: Visto que esta é a condição de filtragem que é geralmente mais restritiva, escolhemos este indice. (Como o price e o date nao estao na mesma tabela, nao podemos fazer um indice composto). Usamos hash porque a filtragem é por igualdade.\n",
     "\n",
