feature: app products listing and new product

--- a/work/E3-report.ipynb
+++ b/work/E3-report.ipynb
@@ -66,15 +66,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 216,
    "id": "c718077c-5193-47a0-bb76-8f1f43a713be",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-10T18:30:31.415125Z",
-     "iopub.status.busy": "2023-06-10T18:30:31.413312Z",
-     "iopub.status.idle": "2023-06-10T18:30:31.888008Z",
-     "shell.execute_reply": "2023-06-10T18:30:31.887435Z",
-     "shell.execute_reply.started": "2023-06-10T18:30:31.415075Z"
+     "iopub.execute_input": "2023-06-11T14:46:39.911136Z",
+     "iopub.status.busy": "2023-06-11T14:46:39.909562Z",
+     "iopub.status.idle": "2023-06-11T14:46:40.374675Z",
+     "shell.execute_reply": "2023-06-11T14:46:40.374158Z",
+     "shell.execute_reply.started": "2023-06-11T14:46:39.911043Z"
     },
     "tags": []
    },
@@ -95,7 +95,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 211,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,15 +219,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 217,
    "id": "e33d841c-c21e-4a9a-88b4-00b45b039261",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-10T18:30:33.467866Z",
-     "iopub.status.busy": "2023-06-10T18:30:33.467361Z",
-     "iopub.status.idle": "2023-06-10T18:30:34.058593Z",
-     "shell.execute_reply": "2023-06-10T18:30:34.057824Z",
-     "shell.execute_reply.started": "2023-06-10T18:30:33.467833Z"
+     "iopub.execute_input": "2023-06-11T14:46:41.878086Z",
+     "iopub.status.busy": "2023-06-11T14:46:41.876835Z",
+     "iopub.status.idle": "2023-06-11T14:46:42.448733Z",
+     "shell.execute_reply": "2023-06-11T14:46:42.448068Z",
+     "shell.execute_reply.started": "2023-06-11T14:46:41.878033Z"
     },
     "tags": []
    },
@@ -1172,7 +1172,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 212,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,7 +1214,7 @@
     "INSERT INTO orders VALUES(8, 2, '2023-03-19');\n",
     "INSERT INTO orders VALUES(9, 3, '2023-04-17');\n",
     "\n",
-    "INSERT INTO product VALUES('TS123456', 'Água Molhadinha, 50cl', 'Água mineral natural da Serra da Estrela. Com pH de 7.0, perfeita para a saude. Produto Nacional', 0.50);\n",
+    "INSERT INTO product VALUES('TS123456', 'Água Molhadinha, 50cl', 'Água mineral natural da Serra da Estrela. Com pH de 7.0, perfeita para a saude. Produto Nacional', 0.50, 123456789000);\n",
     "INSERT INTO product VALUES('KS944RUR', 'Carregador Apple iPhone', 'Carregador lightning de 40W com fio de 40cm.', 90, 789870254652);\n",
     "INSERT INTO product VALUES('KS93528TUT', 'Bolachas Oreo', 'Bolachas de chocolate com recheio de creme.', 1.50);\n",
     "INSERT INTO product VALUES('KA17120203', 'Red Bull, 25cl', 'Bebida energética com cafeína, baixa em açúcar.', 2.50);\n",
