feature: more info on delete page

--- a/work/E3-report.ipynb
+++ b/work/E3-report.ipynb
@@ -66,15 +66,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 236,
    "id": "c718077c-5193-47a0-bb76-8f1f43a713be",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-12T13:52:40.409665Z",
-     "iopub.status.busy": "2023-06-12T13:52:40.408320Z",
-     "iopub.status.idle": "2023-06-12T13:52:40.854080Z",
-     "shell.execute_reply": "2023-06-12T13:52:40.853461Z",
-     "shell.execute_reply.started": "2023-06-12T13:52:40.409595Z"
+     "iopub.execute_input": "2023-06-12T20:10:47.881866Z",
+     "iopub.status.busy": "2023-06-12T20:10:47.880701Z",
+     "iopub.status.idle": "2023-06-12T20:10:48.440117Z",
+     "shell.execute_reply": "2023-06-12T20:10:48.439425Z",
+     "shell.execute_reply.started": "2023-06-12T20:10:47.881760Z"
     },
     "tags": []
    },
@@ -95,7 +95,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 220,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,15 +219,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 237,
    "id": "e33d841c-c21e-4a9a-88b4-00b45b039261",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-12T13:52:42.345711Z",
-     "iopub.status.busy": "2023-06-12T13:52:42.344737Z",
-     "iopub.status.idle": "2023-06-12T13:52:43.133493Z",
-     "shell.execute_reply": "2023-06-12T13:52:43.132041Z",
-     "shell.execute_reply.started": "2023-06-12T13:52:42.345669Z"
+     "iopub.execute_input": "2023-06-12T20:10:49.913673Z",
+     "iopub.status.busy": "2023-06-12T20:10:49.912039Z",
+     "iopub.status.idle": "2023-06-12T20:10:50.475290Z",
+     "shell.execute_reply": "2023-06-12T20:10:50.474770Z",
+     "shell.execute_reply.started": "2023-06-12T20:10:49.913600Z"
     },
     "tags": []
    },
@@ -1172,7 +1172,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 221,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,12 +1221,12 @@
     "INSERT INTO product VALUES('HM21KMPW', 'Portátil Gaming ASUS Rog Strix', 'Intel Core i7, 32Gb Ram, RTX 4080, SSD NVMe 1Tb', 2389.99);\n",
     "INSERT INTO product VALUES('X00299X9JF', 'Fortnite 1500 VBUCKS Gift Card', 'Código de acesso a 1500 VBUCKS. Compatível com Windows, Mac, iOS, Android, PlayStation, XBOX, Nintendo Switch.', 0.50);\n",
     "\n",
-    "INSERT INTO supplier VALUES(122365939, 'Av. Santo Condestável, 1950-011 Lisboa', 'Molhadinha, Lda.', 'TS123456', '2024-01-01');\n",
-    "INSERT INTO supplier VALUES(135238432, 'Campo Pequeno, 1000-082 Lisboa', 'Apple', 'KS944RUR', '2024-02-01');\n",
-    "INSERT INTO supplier VALUES(159438584, 'Praça Duque de Saldanha 1, 1050-094 Lisboa', 'Oreo', 'KS93528TUT', '2023-12-31');\n",
-    "INSERT INTO supplier VALUES(154294955, 'Av. da Liberdade 240 2º Esq, 1250-148 Lisboa', 'Red Bull', 'KA17120203', '2024-01-01');\n",
-    "INSERT INTO supplier VALUES(165439089, 'Praça Martim Moniz 39, 1150-052 Lisboa', 'ASUS', 'HM21KMPW', '2025-01-01');\n",
-    "INSERT INTO supplier VALUES(194355853, 'Rua do Grilo 84, 1950-144 Lisboa', 'Epic Games', 'X00299X9JF', '2024-12-31');\n",
+    "INSERT INTO supplier VALUES(122365939, 'Molhadinha, Lda.', 'Av. Santo Condestável, 1950-011 Lisboa', 'TS123456', '2024-01-01');\n",
+    "INSERT INTO supplier VALUES(135238432, 'Apple', 'Campo Pequeno, 1000-082 Lisboa', 'KS944RUR', '2024-02-01');\n",
+    "INSERT INTO supplier VALUES(159438584, 'Oreo', 'Praça Duque de Saldanha 1, 1050-094 Lisboa', 'KS93528TUT', '2023-12-31');\n",
+    "INSERT INTO supplier VALUES(154294955, 'Red Bull', 'Av. da Liberdade 240 2º Esq, 1250-148 Lisboa', 'KA17120203', '2024-01-01');\n",
+    "INSERT INTO supplier VALUES(165439089, 'ASUS', 'Praça Martim Moniz 39, 1150-052 Lisboa', 'HM21KMPW', '2025-01-01');\n",
+    "INSERT INTO supplier VALUES(194355853, 'Epic Games', 'Rua do Grilo 84, 1950-144 Lisboa', 'X00299X9JF', '2024-12-31');\n",
     "\n",
     "INSERT INTO works VALUES(10293847562, 'Logística', 'Rua Cid Tomar 49, 2830-573 Palhais');\n",
     "INSERT INTO works VALUES(10293847562, 'Recursos Humanos', 'Avenida Lago 23, 2765-099 Cascais');\n",
@@ -1510,12 +1510,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 238,
    "id": "5b79ced0-279d-4e04-921e-0c831d7a79f2",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-12T20:15:14.271036Z",
+     "iopub.status.busy": "2023-06-12T20:15:14.268996Z",
+     "iopub.status.idle": "2023-06-12T20:15:15.056018Z",
+     "shell.execute_reply": "2023-06-12T20:15:15.054945Z",
+     "shell.execute_reply.started": "2023-06-12T20:15:14.270965Z"
+    },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;postgresql://db:***@postgres/db&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'postgresql://db:***@postgres/db'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"color: green\">1 rows affected.</span>"
+      ],
+      "text/plain": [
+       "1 rows affected."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>cust_no</th>\n",
+       "            <th>cust_name</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>2</td>\n",
+       "            <td>Miguel</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+---------+-----------+\n",
+       "| cust_no | cust_name |\n",
+       "+---------+-----------+\n",
+       "|    2    |   Miguel  |\n",
+       "+---------+-----------+"
+      ]
+     },
+     "execution_count": 238,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -2301,6 +2363,143 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "826b376e-074f-403e-82c6-598781056207",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "id": "f98ee1c6-7535-4f7e-a5d0-f378b5e9f376",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-12T20:20:03.823484Z",
+     "iopub.status.busy": "2023-06-12T20:20:03.822973Z",
+     "iopub.status.idle": "2023-06-12T20:20:04.250200Z",
+     "shell.execute_reply": "2023-06-12T20:20:04.249519Z",
+     "shell.execute_reply.started": "2023-06-12T20:20:03.823451Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;postgresql://db:***@postgres/db&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'postgresql://db:***@postgres/db'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"color: green\">6 rows affected.</span>"
+      ],
+      "text/plain": [
+       "6 rows affected."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>tin</th>\n",
+       "            <th>address</th>\n",
+       "            <th>name</th>\n",
+       "            <th>address_1</th>\n",
+       "            <th>sku</th>\n",
+       "            <th>date</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>122365939</td>\n",
+       "            <td>Avenida Lago 23, 2765-099 Cascais</td>\n",
+       "            <td>Molhadinha, Lda.</td>\n",
+       "            <td>Av. Santo Condestável, 1950-011 Lisboa</td>\n",
+       "            <td>TS123456</td>\n",
+       "            <td>2024-01-01</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>135238432</td>\n",
+       "            <td>Avenida Lago 23, 2765-099 Cascais</td>\n",
+       "            <td>Apple</td>\n",
+       "            <td>Campo Pequeno, 1000-082 Lisboa</td>\n",
+       "            <td>KS944RUR</td>\n",
+       "            <td>2024-02-01</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>159438584</td>\n",
+       "            <td>Avenida Lago 23, 2765-099 Cascais</td>\n",
+       "            <td>Oreo</td>\n",
+       "            <td>Praça Duque de Saldanha 1, 1050-094 Lisboa</td>\n",
+       "            <td>KS93528TUT</td>\n",
+       "            <td>2023-12-31</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>154294955</td>\n",
+       "            <td>Rua Pé Mouro Armz 108, 2735-542 Sintra</td>\n",
+       "            <td>Red Bull</td>\n",
+       "            <td>Av. da Liberdade 240 2º Esq, 1250-148 Lisboa</td>\n",
+       "            <td>KA17120203</td>\n",
+       "            <td>2024-01-01</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>165439089</td>\n",
+       "            <td>Rua Pé Mouro Armz 108, 2735-542 Sintra</td>\n",
+       "            <td>ASUS</td>\n",
+       "            <td>Praça Martim Moniz 39, 1150-052 Lisboa</td>\n",
+       "            <td>HM21KMPW</td>\n",
+       "            <td>2025-01-01</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>194355853</td>\n",
+       "            <td>Rua Pé Mouro Armz 108, 2735-542 Sintra</td>\n",
+       "            <td>Epic Games</td>\n",
+       "            <td>Rua do Grilo 84, 1950-144 Lisboa</td>\n",
+       "            <td>X00299X9JF</td>\n",
+       "            <td>2024-12-31</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+-----------+----------------------------------------+------------------+----------------------------------------------+------------+------------+\n",
+       "|    tin    |                address                 |       name       |                  address_1                   |    sku     |    date    |\n",
+       "+-----------+----------------------------------------+------------------+----------------------------------------------+------------+------------+\n",
+       "| 122365939 |   Avenida Lago 23, 2765-099 Cascais    | Molhadinha, Lda. |    Av. Santo Condestável, 1950-011 Lisboa    |  TS123456  | 2024-01-01 |\n",
+       "| 135238432 |   Avenida Lago 23, 2765-099 Cascais    |      Apple       |        Campo Pequeno, 1000-082 Lisboa        |  KS944RUR  | 2024-02-01 |\n",
+       "| 159438584 |   Avenida Lago 23, 2765-099 Cascais    |       Oreo       |  Praça Duque de Saldanha 1, 1050-094 Lisboa  | KS93528TUT | 2023-12-31 |\n",
+       "| 154294955 | Rua Pé Mouro Armz 108, 2735-542 Sintra |     Red Bull     | Av. da Liberdade 240 2º Esq, 1250-148 Lisboa | KA17120203 | 2024-01-01 |\n",
+       "| 165439089 | Rua Pé Mouro Armz 108, 2735-542 Sintra |       ASUS       |    Praça Martim Moniz 39, 1150-052 Lisboa    |  HM21KMPW  | 2025-01-01 |\n",
+       "| 194355853 | Rua Pé Mouro Armz 108, 2735-542 Sintra |    Epic Games    |       Rua do Grilo 84, 1950-144 Lisboa       | X00299X9JF | 2024-12-31 |\n",
+       "+-----------+----------------------------------------+------------------+----------------------------------------------+------------+------------+"
+      ]
+     },
+     "execution_count": 240,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "SELECT * FROM delivery d INNER JOIN supplier USING (TIN);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd8ce49a-5978-4c96-bd6f-e612f857b031",
    "metadata": {},
    "outputs": [],
    "source": []
