--- a/work/E3-report.ipynb
+++ b/work/E3-report.ipynb
@@ -24,12 +24,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a6545a02-adea-4c57-b704-cfa1f6253e4b",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-12T21:18:16.258093Z",
+     "iopub.status.busy": "2023-06-12T21:18:16.257775Z",
+     "iopub.status.idle": "2023-06-12T21:18:16.571891Z",
+     "shell.execute_reply": "2023-06-12T21:18:16.570902Z",
+     "shell.execute_reply.started": "2023-06-12T21:18:16.258071Z"
+    },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sql extension is already loaded. To reload it, use:\n",
+      "  %reload_ext sql\n",
+      "displaylimit: Value None will be treated as 0 (no limit)\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext sql\n",
     "%sql postgresql://db:db@postgres/db\n",
@@ -66,15 +83,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 6,
    "id": "c718077c-5193-47a0-bb76-8f1f43a713be",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-12T20:10:47.881866Z",
-     "iopub.status.busy": "2023-06-12T20:10:47.880701Z",
-     "iopub.status.idle": "2023-06-12T20:10:48.440117Z",
-     "shell.execute_reply": "2023-06-12T20:10:48.439425Z",
-     "shell.execute_reply.started": "2023-06-12T20:10:47.881760Z"
+     "iopub.execute_input": "2023-06-12T21:18:20.345078Z",
+     "iopub.status.busy": "2023-06-12T21:18:20.344226Z",
+     "iopub.status.idle": "2023-06-12T21:18:20.743104Z",
+     "shell.execute_reply": "2023-06-12T21:18:20.742125Z",
+     "shell.execute_reply.started": "2023-06-12T21:18:20.345055Z"
     },
     "tags": []
    },
@@ -95,7 +112,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 236,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,15 +236,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 7,
    "id": "e33d841c-c21e-4a9a-88b4-00b45b039261",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-12T20:10:49.913673Z",
-     "iopub.status.busy": "2023-06-12T20:10:49.912039Z",
-     "iopub.status.idle": "2023-06-12T20:10:50.475290Z",
-     "shell.execute_reply": "2023-06-12T20:10:50.474770Z",
-     "shell.execute_reply.started": "2023-06-12T20:10:49.913600Z"
+     "iopub.execute_input": "2023-06-12T21:18:22.913364Z",
+     "iopub.status.busy": "2023-06-12T21:18:22.913037Z",
+     "iopub.status.idle": "2023-06-12T21:18:23.505734Z",
+     "shell.execute_reply": "2023-06-12T21:18:23.504859Z",
+     "shell.execute_reply.started": "2023-06-12T21:18:22.913342Z"
     },
     "tags": []
    },
@@ -1172,7 +1189,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 237,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
