feature: order index, pay

--- a/work/E3-report.ipynb
+++ b/work/E3-report.ipynb
@@ -83,15 +83,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 246,
    "id": "c718077c-5193-47a0-bb76-8f1f43a713be",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-12T23:01:49.589653Z",
-     "iopub.status.busy": "2023-06-12T23:01:49.589147Z",
-     "iopub.status.idle": "2023-06-12T23:01:50.075031Z",
-     "shell.execute_reply": "2023-06-12T23:01:50.074427Z",
-     "shell.execute_reply.started": "2023-06-12T23:01:49.589614Z"
+     "iopub.execute_input": "2023-06-13T14:40:23.982121Z",
+     "iopub.status.busy": "2023-06-13T14:40:23.980893Z",
+     "iopub.status.idle": "2023-06-13T14:40:24.500473Z",
+     "shell.execute_reply": "2023-06-13T14:40:24.496795Z",
+     "shell.execute_reply.started": "2023-06-13T14:40:23.982056Z"
     },
     "tags": []
    },
@@ -112,7 +112,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 244,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,15 +236,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 247,
    "id": "e33d841c-c21e-4a9a-88b4-00b45b039261",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-12T23:01:53.625269Z",
-     "iopub.status.busy": "2023-06-12T23:01:53.623026Z",
-     "iopub.status.idle": "2023-06-12T23:01:54.167704Z",
-     "shell.execute_reply": "2023-06-12T23:01:54.167057Z",
-     "shell.execute_reply.started": "2023-06-12T23:01:53.625173Z"
+     "iopub.execute_input": "2023-06-13T14:40:26.553505Z",
+     "iopub.status.busy": "2023-06-13T14:40:26.551899Z",
+     "iopub.status.idle": "2023-06-13T14:40:27.124554Z",
+     "shell.execute_reply": "2023-06-13T14:40:27.123957Z",
+     "shell.execute_reply.started": "2023-06-13T14:40:26.553449Z"
     },
     "tags": []
    },
@@ -1189,7 +1189,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 245,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2517,6 +2517,88 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bd8ce49a-5978-4c96-bd6f-e612f857b031",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "id": "a2039090-615b-4aa1-93cf-d1aa5c2bdadc",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-13T15:31:25.924016Z",
+     "iopub.status.busy": "2023-06-13T15:31:25.923086Z",
+     "iopub.status.idle": "2023-06-13T15:31:26.333825Z",
+     "shell.execute_reply": "2023-06-13T15:31:26.333217Z",
+     "shell.execute_reply.started": "2023-06-13T15:31:25.923972Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;postgresql://db:***@postgres/db&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'postgresql://db:***@postgres/db'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"color: green\">1 rows affected.</span>"
+      ],
+      "text/plain": [
+       "1 rows affected."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>sum</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>2391.49</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+---------+\n",
+       "|   sum   |\n",
+       "+---------+\n",
+       "| 2391.49 |\n",
+       "+---------+"
+      ]
+     },
+     "execution_count": 249,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "SELECT SUM(qty*price) FROM contains NATURAL JOIN product WHERE order_no = 2; "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd049d47-0aee-4f6b-bec6-7a488dc7edee",
    "metadata": {},
    "outputs": [],
    "source": []
